--- a/src/css/main.css
+++ b/src/css/main.css
@@ -375,7 +375,7 @@ header h1 {
   height: auto;
   flex: 0 1 auto;
   text-align: center;
-  background-color: #222126;
+  background-color: #222125;
 }
 #ce-title h1 {
   margin: 0;
@@ -415,6 +415,7 @@ main {
 /* TOOLBOX */
 #ce-toolbox {
   display: block;
+  position: relative;
   grid-area: toolbox;
   background-color: #141416;
 }
@@ -422,6 +423,7 @@ main {
 /* EDITOR PANEL / PROPERTY PANEL */
 #ce-props {
   display: block;
+  position: relative;
   grid-area: props;
   background-color: #1B1B1E;
   background-image: url('../assets/img/props-background.jpg');
@@ -432,12 +434,98 @@ main {
 /* EDITOR CANVAS */
 #ce-canvas {
   display: block;
+  position: relative;
   grid-area: canvas;
+  overflow: hidden;
+}
+
+/*
+ * Editor canvas tabs
+ */
+
+#ce-canvas-tabs {
+  display: block;
+  position: relative;
+  width: 100%;
+  height: auto;
+  margin: 0;
+  padding: 0;
+}
+#ce-canvas-tabs ul {
+  display: flex;
+  width: 100%;
+  height: 32px;
+  max-width: 100%;
+  max-height: 32px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  overflow: hidden;
+  flex-flow: row nowrap;
+  background-color: #414044;
+  box-shadow: 0 0 4px 4px #222125;
+}
+#ce-canvas-tabs li {
+  display: inline-block;
+  flex: 0 0 auto;
+  max-width: 80%;
+  max-height: 32px;
+  padding: 0 10px;
+  font-size: 14px;
+  line-height: 32px;
+  overflow: hidden;
+  user-select: none;
+  border-right: 1px solid #414044;
+  background-color: #525156;
+  cursor: pointer;
+}
+#ce-canvas-tabs li:last-child {
+  border: none;
+}
+#ce-canvas-tabs li.default {
+  color: #CDAF7B;
+}
+#ce-canvas-tabs li.active {
+  background-color: #222125;
+}
+#ce-canvas-tabs li.active.default {
+  color: #7A2F34;
+}
+#ce-canvas-tabs li.small {
+  padding: 0 4px;
+}
+#ce-canvas-tabs li.stretch:not(.small){
+  flex-grow: 1;
+}
+#ce-canvas-tabs li .inline-control {
+  display: block;
+  float: right;
+  visibility: hidden;
+  width: 12px;
+  height: 12px;
+  margin: 10px 0 10px 6px;
+  padding: 0;
+  line-height: 32px;
+}
+#ce-canvas-tabs li.small .inline-control {
+  visibility: visible;
+  margin: 0;
+}
+#ce-canvas-tabs li:hover .inline-control,
+#ce-canvas-tabs li.active .inline-control {
+  visibility: visible;
+}
+#ce-canvas-tabs .inline-control.make-default {
+  background-color: olivedrab;
+}
+#ce-canvas-tabs .inline-control.delete {
+  background-color: red;
 }
 
 /* EDITOR FOOTER */
 #ce-footer {
   display: block;
+  position: relative;
   grid-area: footer;
   color: #222125;
   background-color: #7A2F34;
