Functionality for adding new views - Added 'add view' tab (overflow handled) - Add view popup - Add view store data manipulation

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -664,6 +664,19 @@ main {
   float: left;
 }
 
+/*
+ * Colors
+ */
+.color-red {
+  color: #c97a7e;
+}
+.color-blue {
+  color: #8fbcd4;
+}
+.color-green {
+  color: #6ac174;
+}
+
 /* ==========================================================================
    EXAMPLE Media Queries for Responsive Design.
    These examples override the primary ("mobile first") styles.
