--- a/src/css/main.css
+++ b/src/css/main.css
@@ -216,6 +216,7 @@ html, body {
   background-image: url("../assets/img/main-background.jpg");
   background-position: left top;
   background-repeat: repeat;
+  overflow: hidden;
 }
 
 /*
@@ -523,6 +524,8 @@ main {
   display: grid;
   width: 100%;
   height: auto;
+  min-width: 0;
+  min-height: 0;
   flex: 1 1 auto;
   grid:
     [editor-start] "toolbox  props   canvas" auto [editor-end]
@@ -554,6 +557,7 @@ main {
 #ce-canvas {
   display: block;
   position: relative;
+  flex-flow: column nowrap;
   grid-area: canvas;
   overflow: hidden;
 }
