Modified custom picker css for new version
Some cleanups...

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -299,7 +299,7 @@ textarea {
 }
 
 /* ==========================================================================
-   Author"s custom styles
+   Author's custom styles
    ========================================================================== */
 
 /*! Controller Editor Style Sheet v1.1.0 | GPL v3 | https://julian-s.ch/ */
