--- a/src/css/pickr.css
+++ b/src/css/pickr.css
@@ -2,6 +2,7 @@
 .pickr {
   position: relative;
   overflow: visible;
+  transform: translateY(0);
 }
 .pickr * {
   box-sizing: border-box;
@@ -14,9 +15,10 @@
   font-family: "Montserrat", sans-serif;
   cursor: pointer;
   background-color: transparent;
+  background-size: 0;
   border: 1px solid #7a2f34;
   border-radius: 4px;
-  transition: background-color 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 .pickr .pcr-button:before {
   background: url('data:image/svg+xml;utf8, <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2 2"><path fill="white" d="M1,0H2V1H1V0ZM0,1H1V2H0V1Z"/><path fill="gray" d="M0,0H1V1H0V0ZM1,1H2V2H1V1Z"/></svg>');
@@ -32,7 +34,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  border-radius: 4px;
+  border-radius: 2px;
+  z-index: -1;
 }
 .pickr .pcr-button:after {
   transition: background-color 0.2s ease-in-out;
@@ -69,8 +72,8 @@
   display: flex;
   flex-direction: column;
   z-index: 10000;
-  top: 0 !important;
-  left: 34px !important;
+  top: 0;
+  left: 0;
   height: 200px;
   width: 360px;
   max-width: 95vw;
@@ -86,20 +89,23 @@
   visibility: visible;
   opacity: 1;
 }
-.pcr-app .swatches {
+.pcr-app .pcr-swatches {
   display: flex;
   flex-wrap: wrap;
   margin-top: 8px;
 }
+.pcr-app .pcr-swatches.pcr-last {
+  margin: 0;
+}
 @supports (display: grid) {
-  .pcr-app .swatches {
+  .pcr-app .pcr-swatches {
     display: grid;
     align-items: center;
     justify-content: space-around;
     grid-template-columns: repeat(auto-fit, 2px);
   }
 }
-.pcr-app .swatches>button {
+.pcr-app .pcr-swatches>button {
   position: relative;
   width: 16px;
   height: 16px;
@@ -113,7 +119,7 @@
   transition: background-color 0.2s ease-in-out;
   z-index: 1;
 }
-.pcr-app .swatches>button:before {
+.pcr-app .pcr-swatches>button:before {
   position: absolute;
   content: "";
   top: 0;
@@ -125,7 +131,7 @@
   border-radius: 4px;
   z-index: -1;
 }
-.pcr-app .swatches>button:after {
+.pcr-app .pcr-swatches>button:after {
   content: "";
   position: absolute;
   top: 0;
@@ -137,7 +143,7 @@
   border-radius: 4px;
   box-sizing: border-box;
 }
-.pcr-app .swatches>button:hover {
+.pcr-app .pcr-swatches>button:hover {
   filter: brightness(1.05);
 }
 .pcr-app .pcr-interaction {
