--- a/src/css/main.css
+++ b/src/css/main.css
@@ -409,6 +409,10 @@ input[type="submit"]:active,
 input[type="submit"]:hover {
   background-color: #87383c;
 }
+input[type="button"]:active,
+input[type="reset"]:active {
+  background-color: #222125;
+}
 input[type="checkbox"] {
   cursor: pointer;
 }
@@ -565,6 +569,10 @@ main {
   margin: 0;
   padding: 0;
   overflow: visible;
+  line-height: 0;
+}
+#ce-props .property>div * {
+  line-height: normal;
 }
 #ce-props h2 {
   margin: 0 10px;
